--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
   color: #fd6e0a;
 }
 
+.dark-2 {
+  color: #474747;
+}
+
 /* Nav styles */
 
 nav {
@@ -21,4 +25,13 @@ nav {
 #nav-title {
   font-size: 45px;
   font-weight: 800;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul a {
+  text-decoration: none;
+  font-size: 20px;
 }
