--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,37 @@
   color: #474747;
 }
 
+.dark-3 {
+  color: #757575;
+}
+
+.btn-primary {
+  background-color: #fd6e0a;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  padding: 18px 36px;
+  font-weight: 700;
+}
+
 /* Nav styles */
 
 nav {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 70px;
 }
 
 #nav-title {
   font-size: 45px;
   font-weight: 800;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
 }
 
 nav ul li {
@@ -34,4 +56,11 @@ nav ul li {
 nav ul a {
   text-decoration: none;
   font-size: 20px;
+  margin-right: 51px;
+}
+
+/* banner styles */
+
+.banner {
+  display: flex;
 }
