--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,14 @@
   padding: 18px 36px;
   font-weight: 700;
 }
+/* header styles */
+
+#header {
+  background-image: url("images/developer.png"), url("images/header_bg.png");
+
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
 
 /* Nav styles */
 
@@ -63,4 +71,14 @@ nav ul a {
 
 .banner {
   display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0 150px;
+}
+
+.banner-content {
+  max-width: 585px;
+}
+
+#dev-img {
+  max-width: 500px;
 }
