--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,18 @@
 .dark-3 {
   color: #757575;
 }
+.bg-color {
+  background-color: #fff8f3;
+}
+.section-title {
+  font-size: 45px;
+  font-weight: bold;
+  color: #181818;
+}
+.section-discription {
+  font-size: 18px;
+  color: #757575;
+}
 
 .btn-primary {
   background-color: #fd6e0a;
@@ -81,4 +93,9 @@ nav ul a {
 
 #dev-img {
   max-width: 500px;
+}
+
+main {
+  max-width: 1140px;
+  margin: 0 auto;
 }
