--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,16 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+
+.aboutme {
+  padding: 130px 150px;
+  margin-top: 130px;
+  margin-bottom: 130px;
+  text-align: center;
+}
+
+.aboutme-discription {
+  background-color: #ffffff;
+  border: solid 1px;
+  padding: 5px;
+}
